demo-helm/manifests/openfaas/templates/alertmanager-dep.yaml
---
# Source: openfaas/templates/alertmanager-dep.yaml

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: alertmanager
    heritage: Tiller
    release: boream
  name: alertmanager
  namespace: "default"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: alertmanager
      annotations:
        sidecar.istio.io/inject: "false"
        checksum/alertmanager-config: "386b7d0850ac456495738a5c9e564a8a408e42c00e8202ce30cfb47ba6913c77"
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:v0.16.1
        imagePullPolicy: Always
        command:
          - "alertmanager"
          - "--config.file=/alertmanager.yml"
          - "--storage.path=/alertmanager"
        livenessProbe:
          httpGet:
            path: /-/ready
            port: 9093
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /-/ready
            port: 9093
          timeoutSeconds: 30
        ports:
        - containerPort: 9093
          protocol: TCP
        resources:
            limits:
              memory: 50Mi
            requests:
              memory: 25Mi
            
        volumeMounts:
        - mountPath: /alertmanager.yml
          name: alertmanager-config
          subPath: alertmanager.yml
        - name: auth
          readOnly: true
          mountPath: "/var/secrets"
      volumes:
        - name: alertmanager-config
          configMap:
            name: alertmanager-config
            items:
              - key: alertmanager.yml
                path: alertmanager.yml
                mode: 0644
        - name: auth
          secret:
            secretName: basic-auth
