demo-helm/manifests/openfaas/templates/basic-auth-plugin-dep.yaml
---
# Source: openfaas/templates/basic-auth-plugin-dep.yaml

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: basic-auth-plugin
    heritage: Tiller
    release: boream
  name: basic-auth-plugin
  namespace: "default"
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "false"
      labels:
        app: basic-auth-plugin
    spec:
      volumes:
      - name: auth
        secret:
          secretName: basic-auth
      containers:
      - name:  basic-auth-plugin
        resources:
            requests:
              cpu: 20m
              memory: 50Mi
            
        image: openfaas/basic-auth-plugin:0.1.1
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 10001
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          timeoutSeconds: 5
        volumeMounts:
        - name: auth
          readOnly: true
          mountPath: "/var/secrets"
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
