demo-helm/manifests/openfaas/templates/faas-idler-dep.yaml
---
# Source: openfaas/templates/faas-idler-dep.yaml

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: faas-idler
  namespace: "default"
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: faas-idler
    heritage: Tiller
    release: boream
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "false"
      labels:
        app: faas-idler
    spec:
      containers:
        - name: faas-idler
          resources:
            requests:
              memory: 64Mi
            
          image: openfaas/faas-idler:0.1.9
          imagePullPolicy: Always
          command:
            - /home/app/faas-idler
            - -dry-run=true
          volumeMounts:
            - name: auth
              readOnly: true
              mountPath: "/var/secrets/"
      volumes:
        - name: auth
          secret:
            secretName: basic-auth
