demo-helm/manifests/openfaas/templates/gateway-dep.yaml
---
# Source: openfaas/templates/gateway-dep.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: gateway
    heritage: Tiller
    release: boream
  name: gateway
  namespace: "default"
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "8082"
      labels:
        app: gateway
    spec:
      serviceAccountName: boream-operator
      volumes:
      - name: auth
        secret:
          secretName: basic-auth
      containers:
      - name: gateway
        resources:
            requests:
              cpu: 50m
              memory: 120Mi
            
        image: openfaas/gateway:0.15.0
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 10001
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          timeoutSeconds: 5
        volumeMounts:
        - name: auth
          readOnly: true
          mountPath: "/var/secrets"
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
      - name: operator
        resources:
            requests:
              cpu: 50m
              memory: 120Mi
            
        image: openfaas/openfaas-operator:0.9.7
        imagePullPolicy: Always
        command:
          - ./openfaas-operator
          - -logtostderr
          - -v=2
        ports:
        - containerPort: 8081
          protocol: TCP
