demo-helm/manifests/openfaas/templates/prometheus-dep.yaml
---
# Source: openfaas/templates/prometheus-dep.yaml

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: prometheus
    heritage: Tiller
    release: boream
  name: prometheus
  namespace: "default"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        sidecar.istio.io/inject: "false"
        checksum/prometheus-config: "e39b06ae39e58f751982349d6da3fcf35bbfa03216dbcb33ae710812785dd2d7"
    spec:
      serviceAccountName: boream-prometheus
      containers:
      - name: prometheus
        resources:
            requests:
              memory: 512Mi
            
        image: prom/prometheus:v2.7.1
        command:
          - "prometheus"
          - "--config.file=/etc/prometheus/prometheus.yml"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: 9090
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /-/healthy
            port: 9090
          timeoutSeconds: 30
        ports:
        - containerPort: 9090
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/prometheus/prometheus.yml
          name: prometheus-config
          subPath: prometheus.yml
        - mountPath: /etc/prometheus/alert.rules.yml
          name: prometheus-config
          subPath: alert.rules.yml
        - mountPath: /prometheus/data
          name: prom-data
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
            items:
              - key: prometheus.yml
                path: prometheus.yml
                mode: 0644
              - key: alert.rules.yml
                path: alert.rules.yml
                mode: 0644
        - name: prom-data
          emptyDir: {}
