demo-helm/manifests/openfaas/templates/queueworker-dep.yaml
---
# Source: openfaas/templates/queueworker-dep.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: queue-worker
    heritage: Tiller
    release: boream
  name: queue-worker
  namespace: "default"
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io.scrape: "false"
      labels:
        app: queue-worker
    spec:
      volumes:
      - name: auth
        secret:
          secretName: basic-auth
      containers:
      - name:  queue-worker
        resources:
            requests:
              cpu: 50m
              memory: 120Mi
            
        image: openfaas/queue-worker:0.7.2
        imagePullPolicy: Always
        volumeMounts:
        - name: auth
          readOnly: true
          mountPath: "/var/secrets"
