demo-helm/manifests/openfaas/templates/alertmanager-svc.yaml
---
# Source: openfaas/templates/alertmanager-svc.yaml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: alertmanager
    heritage: Tiller
    release: boream
  name: alertmanager
  namespace: "default"
spec:
  type: ClusterIP
  ports:
    - port: 9093
      protocol: TCP
  selector:
    app: alertmanager
