demo-helm/manifests/openfaas/templates/basic-auth-plugin-svc.yaml
---
# Source: openfaas/templates/basic-auth-plugin-svc.yaml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: basic-auth-plugin
    heritage: Tiller
    release: boream
  name: basic-auth-plugin
  namespace: "default"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: basic-auth-plugin
