demo-helm/manifests/openfaas/templates/gateway-svc.yaml
---
# Source: openfaas/templates/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: gateway
    heritage: Tiller
    release: boream
  name: gateway
  namespace: "default"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: gateway
