demo-helm/manifests/openfaas/templates/nats-svc.yaml
---
# Source: openfaas/templates/nats-svc.yaml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: nats
    heritage: Tiller
    release: boream
  name: nats
  namespace: "default"
spec:
  type: ClusterIP
  ports:
    - port: 4222
      protocol: TCP
      name: clients
  selector:
    app: nats
