demo-helm/manifests/openfaas/templates/prometheus-svc.yaml
---
# Source: openfaas/templates/prometheus-svc.yaml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    chart: openfaas-4.4.0
    component: prometheus
    heritage: Tiller
    release: boream
  name: prometheus
  namespace: "default"
spec:
  type: ClusterIP
  ports:
    - port: 9090
      protocol: TCP
  selector:
    app: prometheus
